--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,6 +32,6 @@ spring:
 apiEndpointUrl: http://automaster.alliedsoft.hu:9092
 
 # Tell Spring Security (if used) to require requests over HTTPS
-security:
-  require-ssl: true
+#security:
+#  require-ssl: true
 
